# molecular-dynamics-forge

./: .gitignore  .zenodo.json  CITATION.cff  Dockerfile  LICENSE  README.md  ROADMAP.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: QUICKSTART.md
examples/alpha_zein_A8HNE1/: README.md  config.yaml
mdforge/: __init__.py
mdforge/analysis/: __init__.py  clustering.py  com.py  contact_map.py  convergence.py  dccm.py  energies.py  hbonds.py  interface.py  ligand.py  mmpbsa.py  native_contacts.py  nucleic.py  pca.py  prolif.py  ramachandran.py  rin.py  rmsd.py  rmsf.py  rog.py  salt_bridges.py  sasa.py  secondary_structure.py  statistics_summary.py  structural.py
mdforge/analysis/plugins/: __init__.py  example_end_to_end.py
mdforge/cli/: __init__.py  interactive.py  main.py
mdforge/core/: __init__.py  base.py  config.py  context.py  pipeline.py  provenance.py  registry.py  system.py
mdforge/io/: __init__.py  discovery.py  validation.py
mdforge/plotting/: __init__.py  figures.py  style.py
mdforge/report/: __init__.py  generator.py
mdforge/statistics/: __init__.py  correlation.py  descriptive.py  timeseries.py
tests/: test_core.py
